namespaces/live.cloud-platform.service.justice.gov.uk/laa-fee-calculator-ui-dev/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: laa-fee-calculator-ui-dev
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "dev"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "LAA"
    cloud-platform.justice.gov.uk/slack-channel: "laa-clair-taskforce"
    cloud-platform.justice.gov.uk/application: "LAA Fee Calculator UI"
    cloud-platform.justice.gov.uk/owner: "LAA Clair Taskforce: laaclairtaskforce@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/laa-fee-calculator-user-interface"
    cloud-platform.justice.gov.uk/team-name: "laa-clair-taskforce"
    cloud-platform.justice.gov.uk/review-after: ""
